# pico_oscilloscope

./: .gitignore  CMakeLists.txt  build_and_upload  main.c  readme.md
display/: CMakeLists.txt  display.c
probe/: CMakeLists.txt  build_and_upload  probe.c
